--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "mitt": "^3.0.1",
     "vue": "^2.6.14"
+  },
+  "engines": {
+    "node": ">=20.0.0 <21.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
